// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Editor component convert kelvin to whole number celsius when check celsius 1`] = `
<DocumentFragment>
  <div
    class="editor"
  >
    <div
      class="editor__container"
    >
      <div
        class="editor__edit-panel"
      >
        <div
          class="editor__control-field"
        >
          <span
            class="editor__control-label"
          >
            Title
          </span>
          <input
            class="editor__text-input"
            placeholder="Title of widget"
            type="text"
          />
        </div>
        <div
          class="editor__control-field"
        >
          <span
            class="editor__control-label"
          >
            Temperature
          </span>
          <div
            class="editor__radio-group"
          >
            <label
              class="editor__radio-btn"
            >
              <input
                checked=""
                class="editor__radio-input"
                name="temperature"
                type="radio"
              />
              <span
                class="editor__radio-icon"
              />
              °C
            </label>
            <label
              class="editor__radio-btn"
            >
              <input
                class="editor__radio-input"
                name="temperature"
                type="radio"
              />
              <span
                class="editor__radio-icon"
              />
              °F
            </label>
          </div>
        </div>
        <div
          class="editor__control-field"
        >
          <span
            class="editor__control-label"
          >
            Wind
          </span>
          <div
            class="editor__radio-group"
          >
            <label
              class="editor__radio-btn"
            >
              <input
                checked=""
                class="editor__radio-input"
                name="wind"
                type="radio"
              />
              <span
                class="editor__radio-icon"
              />
              On
            </label>
            <label
              class="editor__radio-btn"
            >
              <input
                class="editor__radio-input"
                name="wind"
                type="radio"
              />
              <span
                class="editor__radio-icon"
              />
              Off
            </label>
          </div>
        </div>
      </div>
      <span
        class="editor__verticle-divider"
      />
      <div
        class="editor__display-panel"
      >
        <div
          class="widget"
        >
          <div
            class="widget__title"
            data-testid="widget-title"
          >
            TITLE
          </div>
          <div
            class="widget__content"
          >
            <img
              alt="weather"
              aria-label="weather-icon"
              class="widget__weather-img"
              src="day.svg"
            />
            <div
              class="widget__weather-info"
              data-testid="widget-info"
            >
              <div
                class="widget__city"
              >
                Sydney
              </div>
              <div
                class="widget__temperature"
              >
                12°
              </div>
              <div
                class="widget__wind"
                data-testid="widget-wind"
              >
                <span
                  class="widget__wind-status"
                >
                  Wind
                </span>
                <span
                  class="widget__wind-info"
                >
                  NW 1km/h
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Editor component convert kelvin to whole number fahrenheit when check fahrenheit 1`] = `
<DocumentFragment>
  <div
    class="editor"
  >
    <div
      class="editor__container"
    >
      <div
        class="editor__edit-panel"
      >
        <div
          class="editor__control-field"
        >
          <span
            class="editor__control-label"
          >
            Title
          </span>
          <input
            class="editor__text-input"
            placeholder="Title of widget"
            type="text"
          />
        </div>
        <div
          class="editor__control-field"
        >
          <span
            class="editor__control-label"
          >
            Temperature
          </span>
          <div
            class="editor__radio-group"
          >
            <label
              class="editor__radio-btn"
            >
              <input
                class="editor__radio-input"
                name="temperature"
                type="radio"
              />
              <span
                class="editor__radio-icon"
              />
              °C
            </label>
            <label
              class="editor__radio-btn"
            >
              <input
                class="editor__radio-input"
                name="temperature"
                type="radio"
              />
              <span
                class="editor__radio-icon"
              />
              °F
            </label>
          </div>
        </div>
        <div
          class="editor__control-field"
        >
          <span
            class="editor__control-label"
          >
            Wind
          </span>
          <div
            class="editor__radio-group"
          >
            <label
              class="editor__radio-btn"
            >
              <input
                checked=""
                class="editor__radio-input"
                name="wind"
                type="radio"
              />
              <span
                class="editor__radio-icon"
              />
              On
            </label>
            <label
              class="editor__radio-btn"
            >
              <input
                class="editor__radio-input"
                name="wind"
                type="radio"
              />
              <span
                class="editor__radio-icon"
              />
              Off
            </label>
          </div>
        </div>
      </div>
      <span
        class="editor__verticle-divider"
      />
      <div
        class="editor__display-panel"
      >
        <div
          class="widget"
        >
          <div
            class="widget__title"
            data-testid="widget-title"
          >
            TITLE
          </div>
          <div
            class="widget__content"
          >
            <img
              alt="weather"
              aria-label="weather-icon"
              class="widget__weather-img"
              src="day.svg"
            />
            <div
              class="widget__weather-info"
              data-testid="widget-info"
            >
              <div
                class="widget__city"
              >
                Sydney
              </div>
              <div
                class="widget__temperature"
              >
                53°
              </div>
              <div
                class="widget__wind"
                data-testid="widget-wind"
              >
                <span
                  class="widget__wind-status"
                >
                  Wind
                </span>
                <span
                  class="widget__wind-info"
                >
                  NW 1km/h
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Editor component should not show wind when wind off is checked 1`] = `
<DocumentFragment>
  <div
    class="editor"
  >
    <div
      class="editor__container"
    >
      <div
        class="editor__edit-panel"
      >
        <div
          class="editor__control-field"
        >
          <span
            class="editor__control-label"
          >
            Title
          </span>
          <input
            class="editor__text-input"
            placeholder="Title of widget"
            type="text"
          />
        </div>
        <div
          class="editor__control-field"
        >
          <span
            class="editor__control-label"
          >
            Temperature
          </span>
          <div
            class="editor__radio-group"
          >
            <label
              class="editor__radio-btn"
            >
              <input
                checked=""
                class="editor__radio-input"
                name="temperature"
                type="radio"
              />
              <span
                class="editor__radio-icon"
              />
              °C
            </label>
            <label
              class="editor__radio-btn"
            >
              <input
                class="editor__radio-input"
                name="temperature"
                type="radio"
              />
              <span
                class="editor__radio-icon"
              />
              °F
            </label>
          </div>
        </div>
        <div
          class="editor__control-field"
        >
          <span
            class="editor__control-label"
          >
            Wind
          </span>
          <div
            class="editor__radio-group"
          >
            <label
              class="editor__radio-btn"
            >
              <input
                class="editor__radio-input"
                name="wind"
                type="radio"
              />
              <span
                class="editor__radio-icon"
              />
              On
            </label>
            <label
              class="editor__radio-btn"
            >
              <input
                class="editor__radio-input"
                name="wind"
                type="radio"
              />
              <span
                class="editor__radio-icon"
              />
              Off
            </label>
          </div>
        </div>
      </div>
      <span
        class="editor__verticle-divider"
      />
      <div
        class="editor__display-panel"
      >
        <div
          class="widget"
        >
          <div
            class="widget__title"
            data-testid="widget-title"
          >
            TITLE
          </div>
          <div
            class="widget__content"
          >
            <img
              alt="weather"
              aria-label="weather-icon"
              class="widget__weather-img"
              src="day.svg"
            />
            <div
              class="widget__weather-info"
              data-testid="widget-info"
            >
              <div
                class="widget__city"
              >
                Sydney
              </div>
              <div
                class="widget__temperature"
              >
                12°
              </div>
              <div
                class="widget__wind"
                data-testid="widget-wind"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Editor component should show wind when wind off is checked 1`] = `
<DocumentFragment>
  <div
    class="editor"
  >
    <div
      class="editor__container"
    >
      <div
        class="editor__edit-panel"
      >
        <div
          class="editor__control-field"
        >
          <span
            class="editor__control-label"
          >
            Title
          </span>
          <input
            class="editor__text-input"
            placeholder="Title of widget"
            type="text"
          />
        </div>
        <div
          class="editor__control-field"
        >
          <span
            class="editor__control-label"
          >
            Temperature
          </span>
          <div
            class="editor__radio-group"
          >
            <label
              class="editor__radio-btn"
            >
              <input
                checked=""
                class="editor__radio-input"
                name="temperature"
                type="radio"
              />
              <span
                class="editor__radio-icon"
              />
              °C
            </label>
            <label
              class="editor__radio-btn"
            >
              <input
                class="editor__radio-input"
                name="temperature"
                type="radio"
              />
              <span
                class="editor__radio-icon"
              />
              °F
            </label>
          </div>
        </div>
        <div
          class="editor__control-field"
        >
          <span
            class="editor__control-label"
          >
            Wind
          </span>
          <div
            class="editor__radio-group"
          >
            <label
              class="editor__radio-btn"
            >
              <input
                checked=""
                class="editor__radio-input"
                name="wind"
                type="radio"
              />
              <span
                class="editor__radio-icon"
              />
              On
            </label>
            <label
              class="editor__radio-btn"
            >
              <input
                class="editor__radio-input"
                name="wind"
                type="radio"
              />
              <span
                class="editor__radio-icon"
              />
              Off
            </label>
          </div>
        </div>
      </div>
      <span
        class="editor__verticle-divider"
      />
      <div
        class="editor__display-panel"
      >
        <div
          class="widget"
        >
          <div
            class="widget__title"
            data-testid="widget-title"
          >
            TITLE
          </div>
          <div
            class="widget__content"
          >
            <img
              alt="weather"
              aria-label="weather-icon"
              class="widget__weather-img"
              src="day.svg"
            />
            <div
              class="widget__weather-info"
              data-testid="widget-info"
            >
              <div
                class="widget__city"
              >
                Sydney
              </div>
              <div
                class="widget__temperature"
              >
                12°
              </div>
              <div
                class="widget__wind"
                data-testid="widget-wind"
              >
                <span
                  class="widget__wind-status"
                >
                  Wind
                </span>
                <span
                  class="widget__wind-info"
                >
                  NW 1km/h
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Editor component shows uppercase title in widget when typing in text input 1`] = `
<DocumentFragment>
  <div
    class="editor"
  >
    <div
      class="editor__container"
    >
      <div
        class="editor__edit-panel"
      >
        <div
          class="editor__control-field"
        >
          <span
            class="editor__control-label"
          >
            Title
          </span>
          <input
            class="editor__text-input"
            placeholder="Title of widget"
            type="text"
          />
        </div>
        <div
          class="editor__control-field"
        >
          <span
            class="editor__control-label"
          >
            Temperature
          </span>
          <div
            class="editor__radio-group"
          >
            <label
              class="editor__radio-btn"
            >
              <input
                checked=""
                class="editor__radio-input"
                name="temperature"
                type="radio"
              />
              <span
                class="editor__radio-icon"
              />
              °C
            </label>
            <label
              class="editor__radio-btn"
            >
              <input
                class="editor__radio-input"
                name="temperature"
                type="radio"
              />
              <span
                class="editor__radio-icon"
              />
              °F
            </label>
          </div>
        </div>
        <div
          class="editor__control-field"
        >
          <span
            class="editor__control-label"
          >
            Wind
          </span>
          <div
            class="editor__radio-group"
          >
            <label
              class="editor__radio-btn"
            >
              <input
                checked=""
                class="editor__radio-input"
                name="wind"
                type="radio"
              />
              <span
                class="editor__radio-icon"
              />
              On
            </label>
            <label
              class="editor__radio-btn"
            >
              <input
                class="editor__radio-input"
                name="wind"
                type="radio"
              />
              <span
                class="editor__radio-icon"
              />
              Off
            </label>
          </div>
        </div>
      </div>
      <span
        class="editor__verticle-divider"
      />
      <div
        class="editor__display-panel"
      >
        <div
          class="widget"
        >
          <div
            class="widget__title"
            data-testid="widget-title"
          >
            TITLE
          </div>
          <div
            class="widget__content"
          >
            <img
              alt="weather"
              aria-label="weather-icon"
              class="widget__weather-img"
              src="day.svg"
            />
            <div
              class="widget__weather-info"
              data-testid="widget-info"
            >
              <div
                class="widget__city"
              >
                Sydney
              </div>
              <div
                class="widget__temperature"
              >
                12°
              </div>
              <div
                class="widget__wind"
                data-testid="widget-wind"
              >
                <span
                  class="widget__wind-status"
                >
                  Wind
                </span>
                <span
                  class="widget__wind-info"
                >
                  NW 1km/h
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
